[gd_scene load_steps=27 format=3 uid="uid://dx2rb84teimhh"]

[ext_resource type="Script" uid="uid://ppef6by4oy7i" path="res://addons/RPGData/Scripts/common_events_panel.gd" id="1_l5qjp"]
[ext_resource type="PackedScene" uid="uid://pc2xir2w2ox2" path="res://addons/RPGData/Scenes/panel_title.tscn" id="2_d4p0t"]
[ext_resource type="PackedScene" uid="uid://m1iixxkyrur5" path="res://addons/CustomControls/custom_simple_item_list.tscn" id="3_35y0g"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="4_xk61a"]
[ext_resource type="PackedScene" uid="uid://bwgf6rhx3a6cq" path="res://addons/CustomControls/custom_panel.tscn" id="5_g2jbl"]
[ext_resource type="PackedScene" uid="uid://ccipi0sikmjuu" path="res://addons/CustomControls/custom_tab_container.tscn" id="5_rdtje"]
[ext_resource type="Texture2D" uid="uid://boox5y8kclay2" path="res://addons/CustomControls/Images/tab2_button_normal.png" id="6_j1gr8"]
[ext_resource type="PackedScene" uid="uid://1uibymv4bb3j" path="res://addons/CustomControls/custom_line_edit.tscn" id="6_jlqfl"]
[ext_resource type="Script" uid="uid://d0kowhkcjb7kv" path="res://addons/CustomControls/custom_option_button.gd" id="7_04yiy"]
[ext_resource type="PackedScene" uid="uid://c6vqhgg1w1sxj" path="res://addons/CustomControls/custom_button_2.tscn" id="7_r32qx"]
[ext_resource type="PackedScene" uid="uid://u75p1b2dn3yq" path="res://addons/CustomControls/event_page_list_editor.tscn" id="9_qdx3s"]
[ext_resource type="PackedScene" uid="uid://barmev3c3hfbu" path="res://addons/CustomControls/custom_text_edit.tscn" id="10_nkt71"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6s3bo"]
resource_local_to_scene = true
content_margin_left = 3.0
content_margin_right = 3.0
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.113725, 0.133333, 0.160784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kihu1"]
resource_local_to_scene = true
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Gradient" id="Gradient_3obsl"]
offsets = PackedFloat32Array(0, 0.369535, 1)
colors = PackedColorArray(0.0484924, 0.454508, 0.886719, 1, 0.0403748, 0.296637, 0.738281, 1, 0.0518364, 0.4513, 0.876835, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mtkxg"]
gradient = SubResource("Gradient_3obsl")
fill_from = Vector2(0.547009, 1)
fill_to = Vector2(0.559829, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rxxl6"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_mtkxg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_844mk"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_mtkxg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fgwc"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8c1mp"]
texture = ExtResource("6_j1gr8")
texture_margin_left = 18.0
texture_margin_right = 18.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0kr1"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Gradient" id="Gradient_p6l2f"]
colors = PackedColorArray(0.286275, 0.301961, 0.309804, 1, 0.337255, 0.34902, 0.356863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qwl44"]
gradient = SubResource("Gradient_p6l2f")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1d0va"]
texture = SubResource("GradientTexture2D_qwl44")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwmh1"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q62ma"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CommonEventPanel" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
script = ExtResource("1_l5qjp")

[node name="LeftColumn" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="PanelTitle" parent="LeftColumn" instance=ExtResource("2_d4p0t")]
layout_mode = 2
text = "Global Events"

[node name="MainList" parent="LeftColumn" instance=ExtResource("3_35y0g")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/v_separation = -1
theme_override_styles/panel = SubResource("StyleBoxFlat_6s3bo")
theme_override_styles/focus = SubResource("StyleBoxFlat_6s3bo")
theme_override_styles/hovered = SubResource("StyleBoxFlat_kihu1")
theme_override_styles/selected = SubResource("StyleBoxTexture_rxxl6")
theme_override_styles/selected_focus = SubResource("StyleBoxTexture_844mk")
select_mode = 1
odd_line_color = Color(0.172549, 0.184314, 0.192157, 1)
event_line_color = Color(0.145098, 0.156863, 0.164706, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="LeftColumn"]
layout_mode = 2

[node name="AddDataButton" parent="LeftColumn/HBoxContainer" instance=ExtResource("4_xk61a")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Add Common Event[/title]
Create a new common event"
text = "Add
Common
Event"
text_overrun_behavior = 3

[node name="RemoveDataButton" parent="LeftColumn/HBoxContainer" instance=ExtResource("4_xk61a")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.65)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Remove Common Event[/title]
Remove the selected common event"
disabled = true
text = "Delete
Common
Event"
text_overrun_behavior = 3

[node name="RightColumn" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0fgwc")

[node name="MarginContainer" type="MarginContainer" parent="RightColumn"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="RightColumn/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="RightColumn/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="ConfigDataTabs" parent="RightColumn/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_rdtje")]
unique_name_in_owner = true
clip_children = 0
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
default_tabs = Array[String](["General", "Other"])
tab_name_base = ""
background_color = Color(0, 0, 0, 0)
tab_selected = null
stylebox_tab_selected = SubResource("StyleBoxTexture_8c1mp")

[node name="ControlContainer" parent="RightColumn/MarginContainer/VBoxContainer" instance=ExtResource("5_g2jbl")]
custom_minimum_size = Vector2(510, 160)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_r0kr1")
style1 = SubResource("StyleBoxFlat_r0kr1")
style2 = SubResource("StyleBoxTexture_1d0va")
style3 = SubResource("StyleBoxFlat_iwmh1")

[node name="MarginContainer" type="MarginContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Tab1" type="VBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GeneralSettings" type="PanelContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q62ma")

[node name="MarginContainer" type="MarginContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="HBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name:"

[node name="NameLineEdit" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer" instance=ExtResource("6_jlqfl")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
tooltip_text = "[title]Global Event Name[/title]
Name to identify this global event"

[node name="HBoxContainer" type="VBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Trigger:"

[node name="TriggerOptions" type="OptionButton" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 31)
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "[title]Trigger Mode[/title]
The mode in which this global event will be executed.
[ul] \"Auto Run\": Pauses the game flow while all commands in this event are being processed.
 \"Parallel\": Executes this event in parallel, without interrupting the main game flow.[/ul]"
mouse_default_cursor_shape = 2
selected = 0
item_count = 3
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Auto Run"
popup/item_1/id = 1
popup/item_2/text = "Parallel"
popup/item_2/id = 2
script = ExtResource("7_04yiy")

[node name="HBoxContainer2" type="VBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Switch:"

[node name="SwitchButton" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("7_r32qx")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "[title]Switch[/title]
When the trigger mode is set to a value other than \"none\", this event will be triggered if the specified switch is active."
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)

[node name="Commands" type="PanelContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_q62ma")

[node name="MarginContainer" type="MarginContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/Commands"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/Commands/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/Commands/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Contents"

[node name="EventPageListEditor" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/Commands/MarginContainer/VBoxContainer" instance=ExtResource("9_qdx3s")]
unique_name_in_owner = true
layout_mode = 2

[node name="Tab2" type="VBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Group1" type="PanelContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_q62ma")

[node name="MarginContainer" type="MarginContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab2/Group1"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab2/Group1/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab2/Group1/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Notes:"

[node name="Notes" parent="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab2/Group1/MarginContainer/VBoxContainer" instance=ExtResource("10_nkt71")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "[title]Notes[/title]
Used to make notes while making your game."
wrap_mode = 1

[connection signal="multi_selected" from="LeftColumn/MainList" to="." method="_on_main_list_multi_selected"]
[connection signal="pressed" from="LeftColumn/HBoxContainer/AddDataButton" to="." method="_on_add_data_button_pressed"]
[connection signal="pressed" from="LeftColumn/HBoxContainer/RemoveDataButton" to="." method="_on_remove_data_button_pressed"]
[connection signal="tab_changed" from="RightColumn/MarginContainer/VBoxContainer/HBoxContainer/ConfigDataTabs" to="." method="_on_config_data_tabs_tab_changed"]
[connection signal="text_changed" from="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="item_selected" from="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/TriggerOptions" to="." method="_on_trigger_options_item_selected"]
[connection signal="pressed" from="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab1/GeneralSettings/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/SwitchButton" to="." method="_on_switch_button_pressed"]
[connection signal="text_changed" from="RightColumn/MarginContainer/VBoxContainer/ControlContainer/MarginContainer/Tab2/Group1/MarginContainer/VBoxContainer/Notes" to="." method="_on_notes_text_changed"]
